RESOLVED FIXED107646
REGRESSION(r140338): WebKitGtk+ trying to allocate a buffer too big
https://bugs.webkit.org/show_bug.cgi?id=107646
Summary REGRESSION(r140338): WebKitGtk+ trying to allocate a buffer too big
Sergio Villar Senin
Reported 2013-01-23 00:48:38 PST
REGRESSION(r140338): WebKitGtk+ trying to allocate a buffer too big
Attachments
Patch (2.57 KB, patch)
2013-01-23 00:53 PST, Sergio Villar Senin
cgarcia: review+
Sergio Villar Senin
Comment 1 2013-01-23 00:53:31 PST
Carlos Garcia Campos
Comment 2 2013-01-23 01:07:36 PST
Comment on attachment 184175 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=184175&action=review Thanks > Source/WebCore/ChangeLog:9 > + g_input_stream_read_async() to workaround a glib buffer. The former I guess you mean to workaround a glib bug? Assuming skip is more efficient than read, I think we could add a FIXME pointing to the glib bug to use skip again once the glib bug is fixed.
Sergio Villar Senin
Comment 3 2013-01-23 01:10:32 PST
(In reply to comment #2) > (From update of attachment 184175 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=184175&action=review > > Thanks > > > Source/WebCore/ChangeLog:9 > > + g_input_stream_read_async() to workaround a glib buffer. The former > > I guess you mean to workaround a glib bug? Assuming skip is more efficient than read, I think we could add a FIXME pointing to the glib bug to use skip again once the glib bug is fixed. Sure, it was a glib bug. I guess the FIXME had to be added in r140338 but I can add it here.
Sergio Villar Senin
Comment 4 2013-01-23 01:22:52 PST
Note You need to log in before you can comment on or make changes to this bug.